--- a/www/styles.css
+++ b/www/styles.css
@@ -78,6 +78,13 @@ z-index: 800;
       border-bottom-right-radius: 5px;
 }
 
+.myRow6{
+      width: auto;
+}
+
+.myRow7{	
+    width: auto;
+}
 
 #ver_dados{
       margin-bottom: 20px;
